--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "express-handlebars": "^3.0.0",
+    "express-mysql-session": "^1.2.2",
     "express-session": "^1.15.6",
     "express-validator": "^4.3.0",
     "mysql": "^2.15.0",
