--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "engineStrict": true,
   "engines": {
-    "node": ">=7.0.0"
+    "node": ">=7.0.0 <8.0.0"
   },
   "repository": {
     "type": "git",
